4.5 -> 5.0:
    - jbj: generate per-platform macros for major CPU-linux platforms.
    - mgh: Stop the python module from using rpmrc files
    - mgh: Change python configuration to allow for --with-python 2.x, 2.4 or 2.5. (no value will scan as it previously did)
    - jbj: parameterize upgrade/obsoletes tag. Panu's Big Mistake imho.
    - jbj: reset errno to 0 in rpmgiOpen to eliminate false ENOENT failure.
    - rse: do not build and install NLS data under po/ at all in case of --disable-nls
    - jbj: add new-fangled debugedit patch (#246404).
    - mgh: When the rpmfc_magic_path is not set or can't be expanded, act as if there is no magic file
    - mgh: add lib32 as a valid directory in rpmfc
    - mgh: change uses of @USRLIBRPM@ to %{_usrlibrpm} (needed for runtime relocation)
    - mgh: ensure the rpm python module is linked the same as the rest of RPM
    - rse: prune the 23MB large db/docs/ third-party subtree to no longer ship it in RPM distribution tarballs.
    - rse: allow installation paths to be overridden via "configure" options --with-path-xxx.
    - rse: re-generate lib/getdate.c with newer GNU bison 2.3
    - rse: detect if a script cannot be run because fork(2) failed.
    - rse: use the "ustar" format defined by POSIX 1003.1-1988 to roll the distribution tarball.
    - mgh: resolve namespace conflict with "__stdchrnul" in fnmatch.c
    - mgh: change db3 configure wrapper to process one argument at a time
    - rse: add SQLite RPM DB support for "tmpdir=<path> excl cachesize=<bytes> pagesize=<bytes> temporary private perms=<bitmask>"
    - mgh: allow rpm to be built w/o neon
    - rse: remove unused rpmio/sexp/ sub-library
    - rse: add "errno" information to be more informative in error message when lstat(2) on verification fails.
    - rse: correctly restore SIGILL signal handler in machine detection code. 
    - pmatilaj: nuke antique Red Hat Linux "reference" "baddeps" list (in lib/depends.c)