@@ -1,88 +1,0 @@
-# Per-platform rpm configuration file.
-
-#==============================================================================
-# ---- per-platform macros.
-#
-%_arch			@RPMCANONARCH@
-%_vendor		@RPMCANONVENDOR@
-%_os			@RPMCANONOS@
-%_gnu			@RPMRC_GNU@
-%_target_platform	%{_target_cpu}-%{_vendor}-%{_target_os}
-%optflags		@RPMRC_OPTFLAGS@
-
-#==============================================================================
-# ---- configure macros.
-#
-%_prefix		@prefix@
-%_exec_prefix		@exec_prefix@
-%_bindir		@bindir@
-%_sbindir		@sbindir@
-%_libexecdir		@libexecdir@
-%_datadir		@datadir@
-%_sysconfdir		@sysconfdir@
-%_sharedstatedir	@sharedstatedir@
-%_localstatedir		@localstatedir@
-%_lib			@LIB@
-%_libdir		@LIBDIR@
-%_includedir		@includedir@
-%_oldincludedir		@oldincludedir@
-%_infodir		@infodir@
-%_mandir		@mandir@
-%_initrddir		%{_sysconfdir}/rc.d/init.d
-
-%_defaultdocdir		@DEFAULTDOCDIR@
-
-%_smp_mflags %([ -z "$RPM_BUILD_NCPUS" ] \\\
-	&& RPM_BUILD_NCPUS="`/usr/bin/getconf _NPROCESSORS_ONLN`"; \\\
-	[ "$RPM_BUILD_NCPUS" -gt 1 ] && echo "-j$RPM_BUILD_NCPUS")
-
-@MULTILIBSTART@
-#---------------------------------------------------------------------
-#	Multilibs
-%_multilibno		@MULTILIBNO@
-%_multilibpatt		(/%{_lib}|/usr/%{_lib}(|/gconv)|/usr/local/%{_lib}|/usr/X11R6/%{_lib}|/opt/%{_lib})/[^/]*\\.([oa]|la|so[0-9.]*)$
-@MULTILIBEND@
-
-#==============================================================================
-# ---- Build policy macros.
-#
-#---------------------------------------------------------------------
-#	Expanded at end of %install scriptlet.
-#
-
-%__arch_install_post   @ARCH_INSTALL_POST@
-
-%__os_install_post    \
-    %{_usrlibrpm}/brp-compress \
-    %{_usrlibrpm}/brp-strip \
-    %{_usrlibrpm}/brp-strip-static-archive \
-    %{_usrlibrpm}/brp-strip-comment-note \
-    %{_usrlibrpm}/brp-nobuildrootpath \
-%{nil}
-
-%__spec_install_post\
-    %{?__debug_package:%{__debug_install_post}}\
-    %{__arch_install_post}\
-    %{__os_install_post}\
-%{nil}
-
-# Executed after copying %doc to DOCDIR, with $DOCDIR set
-#%__compress_doc		@prefix@/lib/rpm/compress-doc%{?_noautocompressdoc: --noautocompressdoc='%{_noautocompressdoc}'}
-
-@redhat@#---------------------------------------------------------------------
-@redhat@#	Expanded at end of %prep
-@redhat@#
-@redhat@%__id_u		@__ID_U@
-@redhat@%__chown_Rhf	@__CHOWN_RHF@
-@redhat@%__chgrp_Rhf	@__CHGRP_RHF@
-@redhat@%_fixowner	[ `%{__id_u}` = '0' ] && %{__chown_Rhf} root
-@redhat@%_fixgroup	[ `%{__id_u}` = '0' ] && %{__chgrp_Rhf} @ROOT_GROUP@
-@redhat@%_fixperms	%{__chmod} -Rf @FIXPERMS@
-
-@apple@#---------------------------------------------------------------------
-@apple@#	Apple Darwin vendor specific macros
-@apple@#
-@apple@%_use_internal_dependency_generator     0
-@apple@%__so	dylib
-
-
